@@ -1600,9 +1600,9 @@ and suffixes appropriate for the platform.
 Note that the
 .B win32
 platform adds the
-.B SYSTEMDRIVE
+.B SystemDrive
 and
-.B SYSTEMROOT
+.B SystemRoot
 variables from the user's external environment
 to the construction environment's
 .B ENV
@@ -4730,7 +4730,7 @@ P4LANGUAGE,
 P4PASSWD,
 P4PORT,
 P4USER,
-SYSTEMROOT,
+SystemRoot,
 USER,
 and
 USERNAME.
@@ -4761,9 +4761,9 @@ env.Platform('posix')
 Note that the
 .B win32
 platform adds the
-.B SYSTEMDRIVE
+.B SystemDrive
 and
-.B SYSTEMROOT
+.B SystemRoot
 variables from the user's external environment
 to the construction environment's
 .B ENV
