@@ -47,7 +47,7 @@ from SCons.Tool.PharLapCommon import addPathIfNotExists
 
 # Variables that we want to import from the base OS environment.
 _import_env = [ 'P4PORT', 'P4CLIENT', 'P4USER', 'USER', 'USERNAME', 'P4PASSWD',
-                'P4CHARSET', 'P4LANGUAGE', 'SYSTEMROOT' ]
+                'P4CHARSET', 'P4LANGUAGE', 'SystemRoot' ]
 
 PerforceAction = SCons.Action.Action('$P4COM', '$P4COMSTR')
 
